Fix: Display default forecast data on initial load
Changed files:
- pages/forecast.html: Added and reordered script tags to ensure proper data initialization before rendering.
- pages/accounts.html: Added data-startup.js script for correct data loading.
- pages/transactions.html: Added data-startup.js script for correct data loading.
- js/forecast.js: Updated to use global window.forecastResults to render data loaded from default-data.js.

--- a/pages/home.html
+++ b/pages/home.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/decimal.js/decimal.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
     <!-- <script src="function/ajv7.min.js"></script> -->
+    <script src="../js/default-data.js"></script>
+    <script src="../js/forecast-storage.js"></script>
+    <script src="../js/data-startup.js"></script>
 </head>
 <body class="dark">
     <div class="container">
