--- a/pages/transactions.html
+++ b/pages/transactions.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/app.css">
     <script src="../js/forecast-storage.js"></script>
     <script src="../js/default-data.js"></script>
+    <script src="../js/data-startup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/decimal.js/decimal.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
     <script src="../js/transactions.js"></script>
