--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -71,6 +71,9 @@
       </div>
   </div>
 </div>
+<script src="../js/forecast-storage.js"></script>
+<script src="../js/default-data.js"></script>
+<script src="../js/data-startup.js"></script>
 <script src="../js/forecast.js"></script>
 <script src="../js/navbar.js"></script>
 </body>
