Security: Add strong Content Security Policy meta tag to all main HTML pages
Changed files:
- pages/home.html: added CSP meta tag
- pages/accounts.html: added CSP meta tag
- pages/forecast.html: added CSP meta tag
- pages/transactions.html: added CSP meta tag
- pages/calculator.html: added CSP meta tag
- pages/filemgmt.html: added CSP meta tag

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -14,6 +14,7 @@
     <script src="../js/modal-interest.js" type="module"></script>
     <script src="../js/accounts.js" type="module"></script>
     <script src="../js/navbar.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
 </head>
 <body class="dark">
     <div class="container">
