--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/app.css">
     <script src="https://cdn.jsdelivr.net/npm/decimal.js/decimal.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
 </head>
 <body class="dark">
 <div class="container">
