--- a/pages/home.html
+++ b/pages/home.html
@@ -12,6 +12,7 @@
     <script src="../js/default-data.js"></script>
     <script src="../js/forecast-storage.js"></script>
     <script src="../js/data-startup.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
 </head>
 <body class="dark">
     <div class="container">
