--- a/pages/transactions.html
+++ b/pages/transactions.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
     <script src="../js/transactions.js"></script>
     <script src="../js/navbar.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
 </head>
 <body class="dark">
     <div class="container">
