Refactor: Move all script tags to head, add global-app.js for global helpers
Changed files:
- pages/home.html: moved all script tags to head
- pages/accounts.html: moved all script tags to head
- pages/forecast.html: moved all script tags to head
- pages/transactions.html: moved all script tags to head
- pages/calculator.html: moved all script tags to head
- pages/filemgmt.html: moved all script tags to head
- js/global-app.js: created for global app-level helpers

--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -7,6 +7,9 @@
     <title>Financial Calculator</title>
     <link rel="stylesheet" href="../styles/app.css">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
+    <script src="../js/global-app.js"></script>
+    <script src="../js/calculator.js"></script>
+    <script src="../js/navbar.js"></script>
 </head>
 <body class="dark">
 <!--#include partials/navbar.html -->
@@ -38,7 +41,5 @@
       </div>
   </div>
 </div>
-<script src="../js/calculator.js"></script>
-<script src="../js/navbar.js"></script>
 </body>
 </html>
