--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -8,6 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/decimal.js/decimal.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
+    <script src="../js/global-app.js"></script>
+    <script src="../js/forecast.js"></script>
+    <script src="../js/navbar.js"></script>
 </head>
 <body class="dark">
 <div class="container">
@@ -75,7 +78,5 @@
 <script src="../js/forecast-storage.js"></script>
 <script src="../js/default-data.js"></script>
 <script src="../js/data-startup.js"></script>
-<script src="../js/forecast.js"></script>
-<script src="../js/navbar.js"></script>
 </body>
 </html>
