--- a/pages/home.html
+++ b/pages/home.html
@@ -13,6 +13,13 @@
     <script src="../js/forecast-storage.js"></script>
     <script src="../js/data-startup.js"></script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
+    <script src="../js/global-app.js"></script>
+    <script src="../js/accounts.js"></script>
+    <script src="../js/transactions.js"></script>
+    <script src="../js/forecast.js"></script>
+    <script src="../js/calculator.js"></script>
+    <script src="../js/filemgmt.js"></script>
+    <script src="../js/navbar.js"></script>
 </head>
 <body class="dark">
     <div class="container">
@@ -43,12 +50,6 @@
         <!-- Financial Calculator Partial -->
         <!--#include calculator.html -->
     </div>
-    <script src="../js/accounts.js"></script>
-    <script src="../js/transactions.js"></script>
-    <script src="../js/forecast.js"></script>
-    <script src="../js/calculator.js"></script>
-    <script src="../js/filemgmt.js"></script>
-    <script src="../js/navbar.js"></script>
     <script>
       // Overview data population
       document.addEventListener('DOMContentLoaded', function() {
