--- a/pages/transactions.html
+++ b/pages/transactions.html
@@ -6,11 +6,9 @@
     <title>Transactions | Financial Simulation</title>
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='-5' y='90' font-size='100'%3E%24%3C/text%3E%3C/svg%3E" type="image/svg+xml">
     <link rel="stylesheet" href="../styles/app.css">
-    <script src="../js/forecast-storage.js"></script>
-    <script src="../js/default-data.js"></script>
-    <script src="../js/data-startup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/decimal.js/decimal.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.32.0.min.js"></script>
+    <script src="../js/global-app.js"></script>
     <script src="../js/transactions.js"></script>
     <script src="../js/navbar.js"></script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
