Refactor: Inject accounts panel header from JS for CSP compliance
Changed files:
- pages/accounts.html: removed inline event handler, added header placeholder
- js/accounts.js: injects panel header and attaches event listener in JS

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -22,10 +22,7 @@
         <div id="main-navbar"></div>
         <!-- Accounts Section Partial -->
         <div class="input-section" id="panel-accounts">
-            <div class="panel-header" onclick="toggleAccordion('panel-accounts')">
-                <h2>Accounts</h2>
-                <span class="panel-arrow">&#9662;</span>
-            </div>
+            <div id="accounts-panel-header"></div>
             <div class="panel-content">
                 <div class="desc">Add one or more accounts. Each account can have a starting balance and an interest rate (applied each period).</div>
                 <form id="accountForm" class="form-inline">
