Feature: Add interest modal to main account form
Changed files:
- pages/accounts.html: added Add/Edit Interest button to account form
- js/accounts.js: wired up interest modal for new account creation
- Documentation/accounts.md: documented new interest modal feature in account form

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -30,6 +30,7 @@
                     <input type="text" id="acct_name" required placeholder="e.g. Checking">
                     <label for="acct_balance">Starting Balance</label>
                     <input type="number" id="acct_balance" required placeholder="e.g. 1000">
+                    <button type="button" id="addInterestBtn">Add/Edit Interest</button>
                     <button type="submit">Add/Update</button>
                 </form>
                 <div class="account-list">
