Fix duplicate row insertion on add
Changed files:
- js/transactions.js: Remove redundant push in onSave handler, only update for edits. New rows are now only inserted by EditableGrid, preventing double insertion.

--- a/pages/transactions.html
+++ b/pages/transactions.html
@@ -14,15 +14,12 @@
 </head>
 <body class="dark">
     <div class="container">
-        <div id="main-navbar"></div>
-        <!--#include partials/navbar.html -->
-        
-        <!-- Transactions Section -->
+        <div id="main-navbar"></div>        
         <div class="panel" id="panel-transactions">
             <div id="transactions-panel-header">
                 <!-- Header will be injected by JS -->
             </div>
-            <div class="panel-content" style="display: block;">
+            <div class="panel-content">
                 <div class="toolbar">
                     <button id="quickAddTransactionBtn" class="btn">Quick Add Transaction</button>
                 </div>
