--- a/Break-even-analysis.html
+++ b/Break-even-analysis.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Break-Even Loan Growth Calculator</title>
+  <title>Loan Growth Scenario Comparator</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -14,41 +14,38 @@
     h1, h2 {
       color: #90caf9;
     }
-    label {
-      margin-top: 20px;
-      font-weight: bold;
+    label, input, button {
       display: block;
-    }
-    input {
       width: 100%;
+      margin-top: 10px;
+    }
+    input, button {
       padding: 8px;
       background: #1e1e1e;
       color: #fff;
       border: 1px solid #444;
       border-radius: 5px;
-      margin-bottom: 10px;
     }
     button {
-      margin-top: 20px;
-      padding: 10px 20px;
       background-color: #2196f3;
-      color: white;
-      border: none;
-      border-radius: 5px;
       cursor: pointer;
     }
     button:hover {
       background-color: #42a5f5;
     }
     .result, .details {
-      margin-top: 30px;
-      background: #1f1f1f;
+      margin-top: 20px;
       padding: 20px;
+      background: #1f1f1f;
       border-radius: 8px;
       border: 1px solid #333;
     }
     canvas {
       margin-top: 30px;
+    }
+    .scenario-btn {
+      margin-top: 15px;
+      width: auto;
     }
     table {
       width: 100%;
@@ -63,11 +60,14 @@
     th {
       background: #333;
     }
+    .subtotal-row {
+      background-color: #2e2e2e;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <h1>Break-Even Loan Growth Calculator</h1>
-  <p>Modify any value to instantly see updated forecasts. The model assumes monthly interest-only payments and full capital repayment at the end.</p>
+  <h1>Loan Growth Scenario Comparator</h1>
 
   <label>Loan Amount</label>
   <input type="number" id="loan" value="100000">
@@ -81,84 +81,59 @@
   <label>Your Own Capital</label>
   <input type="number" id="ownCapital" value="25000">
 
-  <label>Monthly Growth Rate (%) <small>(leave blank to auto-calculate break-even)</small></label>
+  <label>Monthly Growth Rate (%) <small>(leave blank to auto-calculate)</small></label>
   <input type="number" id="growth" placeholder="Auto-calculate if empty">
 
-  <button onclick="exportToExcel()">Export to Excel</button>
+  <button onclick="addScenario()">Add Scenario</button>
+  <button onclick="clearScenarios()">Clear All Scenarios</button>
 
-  <div class="result" id="result"></div>
   <canvas id="chart" height="100"></canvas>
+  <div id="scenarioList"></div>
   <div class="details" id="details"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    const inputs = ['loan', 'rate', 'term', 'ownCapital', 'growth'];
-    inputs.forEach(id => document.getElementById(id).addEventListener('input', calculate));
-
     let chart;
+    const scenarios = [];
+    const colors = ['#42a5f5', '#66bb6a', '#ef5350', '#ffa726', '#ab47bc'];
 
-    function calculate() {
+    function addScenario() {
       const L = parseFloat(document.getElementById('loan').value);
       const r = parseFloat(document.getElementById('rate').value) / 100;
       const T = parseInt(document.getElementById('term').value);
       const C = parseFloat(document.getElementById('ownCapital').value);
       let G = parseFloat(document.getElementById('growth').value) / 100;
-
       const I = (r / 12) * L;
       const total = L + C;
 
-      // If G is not provided, binary search break-even
-      if (isNaN(G)) {
-        G = binarySearchGrowth(total, I, T, L);
-        document.getElementById('growth').value = (G * 100).toFixed(4);
-      }
+      if (isNaN(G)) G = binarySearchGrowth(total, I, T, L);
 
       let balance = total;
-      let rows = '';
-      let labels = [], data = [];
-      let cumulativeInterest = 0;
+      const data = [];
+      const grid = [];
 
-      for (let t = 1; t <= T; t++) {
+      for (let t = 0; t < T; t++) {
+        const startBalance = balance;
         const growth = balance * G;
         balance += growth;
         balance -= I;
-        cumulativeInterest += I;
-
-        labels.push('Month ' + t);
         data.push(balance.toFixed(2));
-
-        rows += `<tr>
-          <td>${t}</td>
-          <td>${(balance - growth + I).toFixed(2)}</td>
-          <td>${growth.toFixed(2)}</td>
-          <td>${I.toFixed(2)}</td>
-          <td>${balance.toFixed(2)}</td>
-        </tr>`;
+        grid.push({
+          month: t + 1,
+          start: startBalance.toFixed(2),
+          growth: growth.toFixed(2),
+          interest: I.toFixed(2),
+          end: balance.toFixed(2)
+        });
       }
 
-      const netGain = balance - L;
+      const finalNet = parseFloat(balance.toFixed(2)) - L;
 
-      document.getElementById('result').innerHTML = `
-        <h2>Summary</h2>
-        <p><strong>Total Interest Paid:</strong> ${cumulativeInterest.toFixed(2)}</p>
-        <p><strong>Final Balance:</strong> ${balance.toFixed(2)}</p>
-        <p><strong>Repayable Capital:</strong> ${L.toFixed(2)}</p>
-        <p><strong>Net Surplus/Shortfall:</strong> ${netGain.toFixed(2)}</p>
-        <p><strong>Break-Even Growth Rate:</strong> ${(G * 100).toFixed(4)}% per month</p>
-        <p><em>${netGain >= 0 ? '✅ Break-even achieved or exceeded.' : '⚠️ Insufficient growth to repay loan.'}</em></p>
-      `;
-
-      document.getElementById('details').innerHTML = `
-        <h2>Monthly Breakdown</h2>
-        <table>
-          <thead>
-            <tr><th>Month</th><th>Start Balance</th><th>Growth</th><th>Interest Paid</th><th>End Balance</th></tr>
-          </thead>
-          <tbody>${rows}</tbody>
-        </table>
-      `;
-
-      updateChart(labels, data);
+      const label = `Scenario ${scenarios.length + 1} (${(G * 100).toFixed(2)}% growth)`;
+      scenarios.push({ label, data, grid, visible: true, subtotal: finalNet });
+      updateChart();
+      listScenarios();
+      updateTable();
     }
 
     function binarySearchGrowth(startingCapital, monthlyInterest, months, repayAmount) {
@@ -176,24 +151,22 @@
       return high;
     }
 
-    function updateChart(labels, data) {
+    function updateChart() {
       const ctx = document.getElementById('chart').getContext('2d');
       if (chart) chart.destroy();
       chart = new Chart(ctx, {
         type: 'line',
         data: {
-          labels: labels,
-          datasets: [{
-            label: 'Capital Over Time',
-            data: data,
-            borderColor: '#42a5f5',
+          labels: Array.from({length: scenarios[0].data.length}, (_, i) => 'Month ' + (i + 1)),
+          datasets: scenarios.filter(s => s.visible).map((s, i) => ({
+            label: s.label,
+            data: s.data,
+            borderColor: colors[i % colors.length],
             fill: false
-          }]
+          }))
         },
         options: {
-          plugins: {
-            legend: { labels: { color: '#fff' } }
-          },
+          plugins: { legend: { labels: { color: '#fff' } } },
           scales: {
             x: { ticks: { color: '#ccc' } },
             y: { ticks: { color: '#ccc' } }
@@ -202,22 +175,55 @@
       });
     }
 
-    function exportToExcel() {
-      const table = document.querySelector('table');
-      if (!table) return alert("Please run a calculation first.");
-      let csv = Array.from(table.rows).map(row =>
-        Array.from(row.cells).map(cell => `"${cell.innerText}"`).join(',')
-      ).join('\n');
-
-      const blob = new Blob([csv], { type: 'text/csv' });
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(blob);
-      a.download = 'loan_forecast.csv';
-      a.click();
+    function listScenarios() {
+      document.getElementById('scenarioList').innerHTML =
+        scenarios.map((s, index) =>
+          `<label><input type='checkbox' checked onchange='toggleScenario(${index})'> ${s.label}</label>`
+        ).join('');
     }
 
-    // Trigger initial calc
-    calculate();
+    function toggleScenario(index) {
+      scenarios[index].visible = !scenarios[index].visible;
+      updateChart();
+      updateTable();
+    }
+
+    function clearScenarios() {
+      scenarios.length = 0;
+      if (chart) chart.destroy();
+      document.getElementById('scenarioList').innerHTML = '';
+      document.getElementById('details').innerHTML = '';
+    }
+
+    function updateTable() {
+      if (scenarios.length === 0) return;
+      let T = scenarios[0].grid.length;
+      let headers = '<tr><th>Month</th>' + scenarios.map((s, i) =>
+        s.visible ? `<th colspan='4'>${s.label}</th>` : ''
+      ).join('') + '</tr>';
+      let subheaders = '<tr><td></td>' + scenarios.map(s =>
+        s.visible ? '<td>Start</td><td>Growth</td><td>Interest</td><td>End</td>' : ''
+      ).join('') + '</tr>';
+
+      let body = '';
+      for (let t = 0; t < T; t++) {
+        let row = `<tr><td>${t + 1}</td>` + scenarios.map(s => {
+          if (!s.visible) return '';
+          let g = s.grid[t];
+          return `<td>${g.start}</td><td>${g.growth}</td><td>${g.interest}</td><td>${g.end}</td>`;
+        }).join('') + '</tr>';
+        body += row;
+      }
+
+      let subtotals = '<tr class="subtotal-row"><td>Net After Repaying Loan</td>' + scenarios.map(s =>
+        s.visible ? `<td colspan='4' style='text-align:center;'>${s.subtotal.toFixed(2)}</td>` : ''
+      ).join('') + '</tr>';
+
+      document.getElementById('details').innerHTML = `
+        <h2>All Visible Scenarios - Monthly Breakdown</h2>
+        <table>${headers + subheaders + body + subtotals}</table>
+      `;
+    }
   </script>
 </body>
 </html>
