feat: Step 15 - Update home page and navigation
Changed files:
- js/navbar.js: Updated navigation links
  - Removed POC and test page links (accounts-poc, library-test)
  - Added proper Accounts page link
  - Updated navMap to include new pages

- pages/home.html: Enhanced welcome page
  - Added better layout and styling
  - Expanded feature descriptions
  - Added features list highlighting new capabilities
  - Improved typography and spacing
  - Added dark-themed info box

Result: Clean, professional navigation and informative home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,15 +12,35 @@
 </head>
 <body class="bg-main text-main">
     <div id="main-navbar"></div>
-    <h1 class="text-main">Financial Overview</h1>
-    <div class="text-main">Welcome to FTrack! Use the Forecast page to manage your scenarios, accounts, and transactions.</div>
-    <div id="overview-section">
-      <h2 class="text-main">Getting Started</h2>
-      <ul class="text-main">
-        <li>Go to <strong>Forecast</strong> to view and manage your financial scenarios</li>
-        <li>Each scenario contains accounts, transactions, and projections</li>
-        <li>Switch between scenarios to compare different financial plans</li>
-      </ul>
+    <div style="max-width: 900px; margin: 40px auto; padding: 0 20px;">
+        <h1 class="text-main" style="margin-bottom: 20px;">Welcome to FTrack</h1>
+        <p class="text-main" style="font-size: 1.1em; margin-bottom: 30px;">
+            A powerful financial forecasting tool for managing scenarios, accounts, and transactions.
+        </p>
+        
+        <div id="overview-section" style="margin-bottom: 40px;">
+            <h2 class="text-main" style="margin-bottom: 15px;">Getting Started</h2>
+            <ul class="text-main" style="line-height: 1.8; font-size: 1.05em;">
+                <li><strong>Forecast:</strong> Create and manage financial scenarios with projections</li>
+                <li><strong>Accounts:</strong> View and edit all accounts across scenarios</li>
+                <li><strong>Scenarios:</strong> Compare different financial plans side-by-side</li>
+                <li><strong>Transactions:</strong> Track planned and actual transactions</li>
+                <li><strong>Projections:</strong> Generate automatic forecasts based on your data</li>
+            </ul>
+        </div>
+
+        <div style="background: #232a23; padding: 20px; border-radius: 8px; border: 1px solid #333;">
+            <h3 class="text-main" style="margin-bottom: 10px;">Features</h3>
+            <ul class="text-main" style="line-height: 1.7;">
+                <li>Modern Tabulator-based grids with inline editing</li>
+                <li>Scenario-based financial planning</li>
+                <li>Account management with periodic changes</li>
+                <li>Planned vs actual transaction tracking</li>
+                <li>Automated projection calculations</li>
+                <li>Multi-currency support</li>
+                <li>Dark theme interface</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
