chore: remove standalone Accounts page; remove navbar link and redirect accounts page to Forecast

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -155,7 +155,10 @@
         </div>
     </div>
 
+    <meta http-equiv="refresh" content="0;url=../pages/forecast.html">
     <script type="module" src="../js/navbar.js"></script>
-    <script type="module" src="../js/accounts.js"></script>
+    <noscript>
+      <p style="padding:20px">This page has been removed. <a href="../pages/forecast.html">Go to Forecast</a>.</p>
+    </noscript>
 </body>
 </html>
