Remove all green colors for consistent theme
Changed files:
- styles/app.css: Changed success color from green (#00c851) to cyan (#00d4ff) to match accent theme
- pages/forecast.html: Replaced green header background (#232a23) with theme variable (--bg-tertiary)
- pages/accounts.html: Replaced green header background (#232a23) with theme variable (--bg-tertiary)
- pages/home.html: Replaced green feature box background with theme variables
- pages/library-test.html: Updated to use theme tertiary background variable

--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -18,7 +18,7 @@
         /* Dark theme variables matching app */
         :root {
             --tabulator-bg: #181a1b;
-            --tabulator-header-bg: #232a23;
+            --tabulator-header-bg: var(--bg-tertiary);
             --tabulator-row-bg: #1e1e1e;
             --tabulator-row-hover: #2a2a2a;
             --tabulator-row-selected: #3a3f3a;
