--- a/pages/library-test.html
+++ b/pages/library-test.html
@@ -12,7 +12,7 @@
         <h1 class="text-main">Library Integration Test</h1>
         <p class="text-main">Testing Tabulator and Financial Calculations</p>
         
-        <div style="margin-top: 30px; padding: 20px; background: #232a23; border-radius: 8px;">
+        <div style="margin-top: 30px; padding: 20px; background: var(--bg-tertiary); border-radius: 8px;">
             <h2 class="text-main">Test Results (Check Console)</h2>
             <p class="text-main">Open DevTools Console (Cmd+Option+I) to see test results</p>
         </div>
