--- a/pages/home.html
+++ b/pages/home.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
 
-        <div style="background: #232a23; padding: 20px; border-radius: 8px; border: 1px solid #333;">
+        <div style="background: var(--bg-tertiary); padding: 20px; border-radius: 8px; border: 1px solid var(--border-secondary);">
             <h3 class="text-main" style="margin-bottom: 10px;">Features</h3>
             <ul class="text-main" style="line-height: 1.7;">
                 <li>Modern Tabulator-based grids with inline editing</li>
