Fix Tabulator grid issues and Add New button functionality
Changed files:
- js/forecast.js: Removed window.generateUUID calls, updated delete button formatters to use red SVG icons, modified Add New button to set default accounts for new transactions to ensure visibility in grid
- js/grid-factory.js: Added bottomCalc: 'sum' to createMoneyColumn and createNumberColumn for displaying totals in grid footers
- styles/app.css: Added .delete-cell styling with padding, enforced dark theme on calc rows with !important, constrained .tabulator max-width and added overflow-x auto
- pages/forecast.html: Updated script loading to use dynamic cache busting with timestamp

--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="../styles/app.css">
 
     <script src="../js/navbar.js"></script>
-    <script src="../js/forecast.js" type="module"></script>
+    <script>
+      // Dynamic cache busting
+      console.log('Loading forecast.js with timestamp:', Date.now());
+      const script = document.createElement('script');
+      script.src = '../js/forecast.js?v=' + Date.now();
+      script.type = 'module';
+      document.head.appendChild(script);
+    </script>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
     <!-- Forecast page Tabulator theme moved to styles/app.css -->
 </head>
